# meet-mind

./: .gitignore  README.md  fine_tune_analyst.py  fine_tune_gpu.py  pipeline_main.py  pyproject.toml  test_regex.py
.copilot/: hackathon_context.md  implementation_tracker.md  product.md  tasks.md
backend/: dashboard_server.py  main.py  requirements.txt
backend/agents/: __init__.py  analyst.py  architect.py  scribe.py
backend/agents/roomscribe/: agent.py  config.py  main.py  ocr_worker.py
backend/core/: config.py  database.py  gemma.py
data/: analyst_training.jsonl  generate_training_data.py
data/splits/: test.jsonl  train.jsonl  valid.jsonl
src/agents/: __init__.py
src/agents/roomscribe/: agent.py  main.py  sources.py
tests/: test_model_resolution.py
ui/: README.md  package-lock.json  package.json
ui/dashboard/: dashboard.css  dashboard.js  index.html
ui/electron/: main.js  preload.js
